--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -67,8 +67,9 @@ jobs:
     - name: Prepare Files
       run: |
         cd "/home/runner/openwrt"
-        cp -f "bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined.img" "../openwrt-x86-64-generic-squashfs-combined.img"
-        cp -f "bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined.vmdk" "../openwrt-x86-64-generic-squashfs-combined.vmdk"
+#        cp -f "bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined.img" "../openwrt-x86-64-generic-squashfs-combined.img"
+#        cp -f "bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined.vmdk" "../openwrt-x86-64-generic-squashfs-combined.vmdk"
+        cp -f "bin/targets/x86/64/*.bin" "../"
 #        cp -f "bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined-efi.img" "../openwrt-x86-64-generic-squashfs-combined-efi.img"
 #        cp -f "bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined-efi.vmdk" "../openwrt-x86-64-generic-squashfs-combined-efi.vmdk"
 
@@ -76,7 +77,7 @@ jobs:
       id: assemble_artifact
       run: |
         cd "/home/runner"
-        zip OpenWrt-X86_64.zip openwrt-x86-64-generic-squashfs-combined.img openwrt-x86-64-generic-squashfs-combined.vmdk
+        zip OpenWrt-X86_64.zip *.bin
         release_tag="X86_64-$(date +%Y-%m-%d)"
         echo "##[set-output name=release_tag;]$release_tag"    
     - name: Create Release
